--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <!-- saved from url=(0058)file:///C:/Users/Dallas%20Kraft/Downloads/index%20(3).html -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My First Website</title>
+        <meta name="author" content="Dallas Kraft">
+        <title>DD Kraft | Web Developer</title>
     </head>
     <body>
-       Hello, World, and welcome to my first website!
-    
-</body></html>
+       <p>Hello, World, and welcome to my first website!</p>
+    <p>I will continue to add content to this site over the next few months; so please check back!</p>
+    </body>
+</html>
